<resources>
    <string name="app_name">Cat Quiz</string>

    <string name="q1">1. A cat has how many whiskers, on average?</string>
    <string name="q1_a">24</string>
    <string name="q1_b">16</string>
    <string name="q1_c">12</string>
    <string name="q1_d">8</string>

    <string name="q2">2. Do cats have fewer teeth than dogs have, or more?</string>
    <string name="q2_a">The same</string>
    <string name="q2_b">Fewer</string>
    <string name="q2_c">More</string>

    <string name="q3">3. Which brain is the cat’s brain most similar to?</string>
    <string name="q3_a">Human\'s</string>
    <string name="q3_b">Dog\'s</string>

    <string name="q4">4. Cats can\'t taste this:</string>
    <string name="q4_a">Salt</string>
    <string name="q4_b">Sweet</string>

    <string name="q5">5. Which of the following are the names of cat breeds:</string>
    <string name="q5_a">Burmilla</string>
    <string name="q5_b">Birman</string>
    <string name="q5_c">Beauceron</string>
    <string name="q5_d">Balinese</string>

    <string name="q6">6. And finally what breed is this cat?</string>


    <string name="start_the_quiz">Start the Quiz!</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="next">Next</string>
    <string name="hello_friends">Hello Friends!\n \n Think you know all there is to know about cats? Take this quiz and see!</string>
    <string name="wrong_answer">Ooops, try again</string>
    <string name="q6_hint">Type in the cat breed here</string>
    <string name="q6_1">bengal</string>
    <string name="q6_2">bengal cat</string>
    <string name="q6_3">bengal kitten</string>
    <string name="do_better">You can do better, I\'m sure!</string>
    <string name="an_expert">You are a pawtastic cat expert!</string>
    <string name="share_subject">Here are my Cat Quiz Results</string>
    <string name="results_message_body">Hey check out those are my results in the Cat Quiz:</string>
    <string name="got_right">" You got right "</string>
    <string name="congrats_toast">" out of 6 questions! Congratulations!"</string>
    <string name="do_better_toast">" out of 6 questions! You can do better!"</string>


</resources>
