<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.catquiz.MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/kitten_bg" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/q5" />

            <CheckBox
                android:id="@+id/q5a"
                style="@style/QuestionTextStyle"
                android:text="@string/q5_a" />

            <CheckBox
                android:id="@+id/q5b"
                style="@style/QuestionTextStyle"
                android:text="@string/q5_b" />

            <CheckBox
                android:id="@+id/q5c"
                style="@style/QuestionTextStyle"
                android:text="@string/q5_c" />

            <CheckBox
                android:id="@+id/q5d"
                style="@style/QuestionTextStyle"
                android:text="@string/q5_d" />

            <Button
                android:id="@+id/next_button"
                style="@style/ButtonStyle"
                android:onClick="onNextButtonClicked"
                android:text="@string/next" />
        </LinearLayout>
    </ScrollView>
    </RelativeLayout>

