<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.catquiz.MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/kitten_bg" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/q1" />

            <RadioGroup
                android:id="@+id/q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/q1a"
                    style="@style/QuestionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_a" />

                <RadioButton
                    android:id="@+id/q1b"
                    style="@style/QuestionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_b" />

                <RadioButton
                    android:id="@+id/q1c"
                    style="@style/QuestionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_c" />

                <RadioButton
                    android:id="@+id/q1d"
                    style="@style/QuestionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_d" />
            </RadioGroup>

            <Button
                android:id="@+id/next_button"
                style="@style/ButtonStyle"
                android:onClick="onNextButtonClicked"
                android:text="@string/next" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>