<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.catquiz.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/kitten_bg"
            android:scaleType="centerCrop"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/q2" />
            <RadioGroup
                android:id="@+id/q2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <RadioButton
                    android:id="@+id/q2a"
                    style="@style/QuestionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_a"/>
                <RadioButton
                    android:id="@+id/q2b"
                    style="@style/QuestionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_b"/>
                <RadioButton
                    android:id="@+id/q2c"
                    style="@style/QuestionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_c"/>
                />
            </RadioGroup>

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/next_button"
                android:text="@string/next"
                android:layout_alignParentBottom="true"/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>