<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.catquiz.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/kitten_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/q3" />

            <RadioGroup
                android:id="@+id/q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/q3a"
                    style="@style/QuestionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_a" />

                <RadioButton
                    android:id="@+id/q3b"
                    style="@style/QuestionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_b" />
            </RadioGroup>

            <Button
                android:id="@+id/next_button"
                style="@style/ButtonStyle"
                android:layout_alignParentBottom="true"
                android:onClick="onNextButtonClicked"
                android:text="@string/next" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>