<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.catquiz.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/kitten_bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/q6" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/vertical_margin"
                android:background="@drawable/rounded_corners"
                android:src="@drawable/bengal_cat" />

            <EditText
                android:id="@+id/q6_answer"
                style="@style/LoginTextStyle"
                android:background="@drawable/rounded_corners"
                android:hint="@string/q6_hint"
                android:textColorHint="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/next_button"
                style="@style/ButtonStyle"
                android:onClick="onNextButtonClicked"
                android:text="@string/next" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

